# assuraimant-mlops

./: .dockerignore  .flake8  .gitignore  README.md  docker-compose.yml  monkeytype_config.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
brief_app/: .coverage  db.sqlite3  manage.py  requirements.txt
brief_app/brief_app/: asgi.py  settings.py  urls.py  wsgi.py
brief_app/insurance_app/: admin.py  forms.py  models.py  urls.py  views.py
brief_app/insurance_app/app-tests/: conftest.py  test_admin.py  test_forms.py  test_models.py  test_urls.py
brief_app/insurance_app/app_tests/: test_admin.py  test_forms.py
brief_app/insurance_app/tests/: test_views.py
ci_cd/.github/workflows/: ci.yml
src/brief_app/: .env  manage.py  pytest.ini
src/brief_app/brief_app/: asgi.py  settings.py  urls.py  wsgi.py
src/brief_app/insurance_app/: admin.py  forms.py  models.py  views.py
src/brief_app/insurance_app/app_tests/: conftest.py  test_admin.py  test_models.py  test_urls.py  test_views.py
src/brief_app/insurance_app/migrations/: 0001_initial.py  0002_appointment.py  0003_remove_appointment_datetime_appointment_date_and_more.py  0004_alter_appointment_date.py  0005_availability.py
src/brief_app/insurance_app/templates/insurance_app/: contact_form.html  home.html
src/brief_app/insurance_app/templatetags/: custom_filters.py
src/ci_cd/docker/: Dockerfile  docker-compose.yml
src/ci_cd/shell/: app_entrypoint.sh  build_docker.sh  deploy.sh  run_test.sh
